compilator/project/src/Parsers/RUSTWITHRULESParser.java
package Parsers;
// $ANTLR 3.3 Nov 30, 2010 12:50:56 RUSTWITHRULES.g 2018-02-27 15:18:38

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class RUSTWITHRULESParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ROOT", "STRUCT", "STRUCT_ELTS", "STRUCT_ELT", "FUN", "FUN_ARGS", "ARG", "TYPE_VEC", "TYPE_ADDR", "BLOC", "EXPR", "RETOUR_BLOC", "AFF", "WHILE", "RETURN", "FUN_CALL", "FUN_CALL_ELT", "AFF_STRUCT", "AFF_STRUCT_ELT", "IF", "ELSE", "VEC_DECL", "VEC_ELT", "PRINT", "EXPR_PARENTHESEE", "POINT_ACCESS", "BRACKET_ACCESS", "LENGTH_ACCESS", "OPPOSE", "PTR_CONTENT_ACCESS", "VAR_ADDRESS_ACCESS", "OPPOSE_BOOL", "AFF_STRUCT_SS_ACCOLADE", "SS_ACCOLADE", "FIN_AFF", "L_VALUE", "R_VALUE", "ACCESS", "IDF", "CSTE_ENT", "WS", "COMMENT", "'struct'", "'{'", "':'", "','", "'}'", "'fn'", "'('", "')'", "'->'", "'&'", "'i32'", "'bool'", "'vec'", "'<'", "'>'", "';'", "'let'", "'mut'", "'='", "'while'", "'return'", "'if'", "'else'", "'print'", "'!'", "'['", "']'", "'||'", "'.'", "'len'", "'-'", "'*'", "'&&'", "'=='", "'!='", "'<='", "'>='", "'+'", "'/'", "'true'", "'false'"
    };
    public static final int EOF=-1;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int ROOT=4;
    public static final int STRUCT=5;
    public static final int STRUCT_ELTS=6;
    public static final int STRUCT_ELT=7;
    public static final int FUN=8;
    public static final int FUN_ARGS=9;
    public static final int ARG=10;
    public static final int TYPE_VEC=11;
    public static final int TYPE_ADDR=12;
    public static final int BLOC=13;
    public static final int EXPR=14;
    public static final int RETOUR_BLOC=15;
    public static final int AFF=16;
    public static final int WHILE=17;
    public static final int RETURN=18;
    public static final int FUN_CALL=19;
    public static final int FUN_CALL_ELT=20;
    public static final int AFF_STRUCT=21;
    public static final int AFF_STRUCT_ELT=22;
    public static final int IF=23;
    public static final int ELSE=24;
    public static final int VEC_DECL=25;
    public static final int VEC_ELT=26;
    public static final int PRINT=27;
    public static final int EXPR_PARENTHESEE=28;
    public static final int POINT_ACCESS=29;
    public static final int BRACKET_ACCESS=30;
    public static final int LENGTH_ACCESS=31;
    public static final int OPPOSE=32;
    public static final int PTR_CONTENT_ACCESS=33;
    public static final int VAR_ADDRESS_ACCESS=34;
    public static final int OPPOSE_BOOL=35;
    public static final int AFF_STRUCT_SS_ACCOLADE=36;
    public static final int SS_ACCOLADE=37;
    public static final int FIN_AFF=38;
    public static final int L_VALUE=39;
    public static final int R_VALUE=40;
    public static final int ACCESS=41;
    public static final int IDF=42;
    public static final int CSTE_ENT=43;
    public static final int WS=44;
    public static final int COMMENT=45;

    // delegates
    // delegators


        public RUSTWITHRULESParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public RUSTWITHRULESParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return RUSTWITHRULESParser.tokenNames; }
    public String getGrammarFileName() { return "RUSTWITHRULES.g"; }


    public static class fichier_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "fichier"
    // RUSTWITHRULES.g:52:1: fichier : ( decl )* -> ^( ROOT ( decl )* ) ;
    public final RUSTWITHRULESParser.fichier_return fichier() throws RecognitionException {
        RUSTWITHRULESParser.fichier_return retval = new RUSTWITHRULESParser.fichier_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RUSTWITHRULESParser.decl_return decl1 = null;


        RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");
        try {
            // RUSTWITHRULES.g:52:9: ( ( decl )* -> ^( ROOT ( decl )* ) )
            // RUSTWITHRULES.g:52:11: ( decl )*
            {
            // RUSTWITHRULES.g:52:11: ( decl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==46||LA1_0==51) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // RUSTWITHRULES.g:52:11: decl
            	    {
            	    pushFollow(FOLLOW_decl_in_fichier195);
            	    decl1=decl();

            	    state._fsp--;

            	    stream_decl.add(decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);



            // AST REWRITE
            // elements: decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 52:18: -> ^( ROOT ( decl )* )
            {
                // RUSTWITHRULES.g:52:21: ^( ROOT ( decl )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);

                // RUSTWITHRULES.g:52:28: ( decl )*
                while ( stream_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_decl.nextTree());

                }
                stream_decl.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "fichier"

    public static class decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl"
    // RUSTWITHRULES.g:55:1: decl : ( decl_struct | decl_fun );
    public final RUSTWITHRULESParser.decl_return decl() throws RecognitionException {
        RUSTWITHRULESParser.decl_return retval = new RUSTWITHRULESParser.decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RUSTWITHRULESParser.decl_struct_return decl_struct2 = null;

        RUSTWITHRULESParser.decl_fun_return decl_fun3 = null;



        try {
            // RUSTWITHRULES.g:55:7: ( decl_struct | decl_fun )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==46) ) {
                alt2=1;
            }
            else if ( (LA2_0==51) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // RUSTWITHRULES.g:55:9: decl_struct
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_decl_struct_in_decl219);
                    decl_struct2=decl_struct();

                    state._fsp--;

                    adaptor.addChild(root_0, decl_struct2.getTree());

                    }
                    break;
                case 2 :
                    // RUSTWITHRULES.g:56:4: decl_fun
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_decl_fun_in_decl224);
                    decl_fun3=decl_fun();

                    state._fsp--;

                    adaptor.addChild(root_0, decl_fun3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl"

    public static class decl_struct_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl_struct"
    // RUSTWITHRULES.g:58:1: decl_struct : ( 'struct' IDF -> IDF ) ( '{' ( IDF ':' type ( ',' IDF ':' type )* )? '}' -> ^( STRUCT $decl_struct ( ^( STRUCT_ELT IDF type ) )* ) ) ;
    public final RUSTWITHRULESParser.decl_struct_return decl_struct() throws RecognitionException {
        RUSTWITHRULESParser.decl_struct_return retval = new RUSTWITHRULESParser.decl_struct_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal4=null;
        Token IDF5=null;
        Token char_literal6=null;
        Token IDF7=null;
        Token char_literal8=null;
        Token char_literal10=null;
        Token IDF11=null;
        Token char_literal12=null;
        Token char_literal14=null;
        RUSTWITHRULESParser.type_return type9 = null;

        RUSTWITHRULESParser.type_return type13 = null;


        Object string_literal4_tree=null;
        Object IDF5_tree=null;
        Object char_literal6_tree=null;
        Object IDF7_tree=null;
        Object char_literal8_tree=null;
        Object char_literal10_tree=null;
        Object IDF11_tree=null;
        Object char_literal12_tree=null;
        Object char_literal14_tree=null;
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // RUSTWITHRULES.g:59:2: ( ( 'struct' IDF -> IDF ) ( '{' ( IDF ':' type ( ',' IDF ':' type )* )? '}' -> ^( STRUCT $decl_struct ( ^( STRUCT_ELT IDF type ) )* ) ) )
            // RUSTWITHRULES.g:59:4: ( 'struct' IDF -> IDF ) ( '{' ( IDF ':' type ( ',' IDF ':' type )* )? '}' -> ^( STRUCT $decl_struct ( ^( STRUCT_ELT IDF type ) )* ) )
            {
            // RUSTWITHRULES.g:59:4: ( 'struct' IDF -> IDF )
            // RUSTWITHRULES.g:59:5: 'struct' IDF
            {
            string_literal4=(Token)match(input,46,FOLLOW_46_in_decl_struct237);  
            stream_46.add(string_literal4);

            IDF5=(Token)match(input,IDF,FOLLOW_IDF_in_decl_struct239);  
            stream_IDF.add(IDF5);



            // AST REWRITE
            // elements: IDF
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 59:18: -> IDF
            {
                adaptor.addChild(root_0, stream_IDF.nextNode());

            }

            retval.tree = root_0;
            }

            // RUSTWITHRULES.g:59:26: ( '{' ( IDF ':' type ( ',' IDF ':' type )* )? '}' -> ^( STRUCT $decl_struct ( ^( STRUCT_ELT IDF type ) )* ) )
            // RUSTWITHRULES.g:59:29: '{' ( IDF ':' type ( ',' IDF ':' type )* )? '}'
            {
            char_literal6=(Token)match(input,47,FOLLOW_47_in_decl_struct249);  
            stream_47.add(char_literal6);

            // RUSTWITHRULES.g:59:33: ( IDF ':' type ( ',' IDF ':' type )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==IDF) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // RUSTWITHRULES.g:59:34: IDF ':' type ( ',' IDF ':' type )*
                    {
                    IDF7=(Token)match(input,IDF,FOLLOW_IDF_in_decl_struct252);  
                    stream_IDF.add(IDF7);

                    char_literal8=(Token)match(input,48,FOLLOW_48_in_decl_struct254);  
                    stream_48.add(char_literal8);

                    pushFollow(FOLLOW_type_in_decl_struct256);
                    type9=type();

                    state._fsp--;

                    stream_type.add(type9.getTree());
                    // RUSTWITHRULES.g:59:47: ( ',' IDF ':' type )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==49) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // RUSTWITHRULES.g:59:48: ',' IDF ':' type
                    	    {
                    	    char_literal10=(Token)match(input,49,FOLLOW_49_in_decl_struct259);  
                    	    stream_49.add(char_literal10);

                    	    IDF11=(Token)match(input,IDF,FOLLOW_IDF_in_decl_struct261);  
                    	    stream_IDF.add(IDF11);

                    	    char_literal12=(Token)match(input,48,FOLLOW_48_in_decl_struct263);  
                    	    stream_48.add(char_literal12);

                    	    pushFollow(FOLLOW_type_in_decl_struct265);
                    	    type13=type();

                    	    state._fsp--;

                    	    stream_type.add(type13.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }

            char_literal14=(Token)match(input,50,FOLLOW_50_in_decl_struct271);  
            stream_50.add(char_literal14);



            // AST REWRITE
            // elements: decl_struct, type, IDF
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 59:73: -> ^( STRUCT $decl_struct ( ^( STRUCT_ELT IDF type ) )* )
            {
                // RUSTWITHRULES.g:59:76: ^( STRUCT $decl_struct ( ^( STRUCT_ELT IDF type ) )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(STRUCT, "STRUCT"), root_1);

                adaptor.addChild(root_1, stream_retval.nextTree());
                // RUSTWITHRULES.g:59:99: ( ^( STRUCT_ELT IDF type ) )*
                while ( stream_type.hasNext()||stream_IDF.hasNext() ) {
                    // RUSTWITHRULES.g:59:99: ^( STRUCT_ELT IDF type )
                    {
                    Object root_2 = (Object)adaptor.nil();
                    root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(STRUCT_ELT, "STRUCT_ELT"), root_2);

                    adaptor.addChild(root_2, stream_IDF.nextNode());
                    adaptor.addChild(root_2, stream_type.nextTree());

                    adaptor.addChild(root_1, root_2);
                    }

                }
                stream_type.reset();
                stream_IDF.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl_struct"

    public static class decl_fun_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl_fun"
    // RUSTWITHRULES.g:62:1: decl_fun : 'fn' IDF '(' ( argument ( ',' argument )* )? ')' ( '->' type )? bloc -> ^( FUN IDF ^( FUN_ARGS ( argument )* ) ( type )? bloc ) ;
    public final RUSTWITHRULESParser.decl_fun_return decl_fun() throws RecognitionException {
        RUSTWITHRULESParser.decl_fun_return retval = new RUSTWITHRULESParser.decl_fun_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal15=null;
        Token IDF16=null;
        Token char_literal17=null;
        Token char_literal19=null;
        Token char_literal21=null;
        Token string_literal22=null;
        RUSTWITHRULESParser.argument_return argument18 = null;

        RUSTWITHRULESParser.argument_return argument20 = null;

        RUSTWITHRULESParser.type_return type23 = null;

        RUSTWITHRULESParser.bloc_return bloc24 = null;


        Object string_literal15_tree=null;
        Object IDF16_tree=null;
        Object char_literal17_tree=null;
        Object char_literal19_tree=null;
        Object char_literal21_tree=null;
        Object string_literal22_tree=null;
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
        RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
        RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
        RewriteRuleTokenStream stream_54=new RewriteRuleTokenStream(adaptor,"token 54");
        RewriteRuleSubtreeStream stream_bloc=new RewriteRuleSubtreeStream(adaptor,"rule bloc");
        RewriteRuleSubtreeStream stream_argument=new RewriteRuleSubtreeStream(adaptor,"rule argument");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // RUSTWITHRULES.g:62:9: ( 'fn' IDF '(' ( argument ( ',' argument )* )? ')' ( '->' type )? bloc -> ^( FUN IDF ^( FUN_ARGS ( argument )* ) ( type )? bloc ) )
            // RUSTWITHRULES.g:62:11: 'fn' IDF '(' ( argument ( ',' argument )* )? ')' ( '->' type )? bloc
            {
            string_literal15=(Token)match(input,51,FOLLOW_51_in_decl_fun305);  
            stream_51.add(string_literal15);

            IDF16=(Token)match(input,IDF,FOLLOW_IDF_in_decl_fun307);  
            stream_IDF.add(IDF16);

            char_literal17=(Token)match(input,52,FOLLOW_52_in_decl_fun309);  
            stream_52.add(char_literal17);

            // RUSTWITHRULES.g:62:24: ( argument ( ',' argument )* )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==IDF) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // RUSTWITHRULES.g:62:26: argument ( ',' argument )*
                    {
                    pushFollow(FOLLOW_argument_in_decl_fun313);
                    argument18=argument();

                    state._fsp--;

                    stream_argument.add(argument18.getTree());
                    // RUSTWITHRULES.g:62:35: ( ',' argument )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==49) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // RUSTWITHRULES.g:62:37: ',' argument
                    	    {
                    	    char_literal19=(Token)match(input,49,FOLLOW_49_in_decl_fun317);  
                    	    stream_49.add(char_literal19);

                    	    pushFollow(FOLLOW_argument_in_decl_fun319);
                    	    argument20=argument();

                    	    state._fsp--;

                    	    stream_argument.add(argument20.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);


                    }
                    break;

            }

            char_literal21=(Token)match(input,53,FOLLOW_53_in_decl_fun326);  
            stream_53.add(char_literal21);

            // RUSTWITHRULES.g:62:59: ( '->' type )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==54) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // RUSTWITHRULES.g:62:60: '->' type
                    {
                    string_literal22=(Token)match(input,54,FOLLOW_54_in_decl_fun329);  
                    stream_54.add(string_literal22);

                    pushFollow(FOLLOW_type_in_decl_fun331);
                    type23=type();

                    state._fsp--;

                    stream_type.add(type23.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_bloc_in_decl_fun335);
            bloc24=bloc();

            state._fsp--;

            stream_bloc.add(bloc24.getTree());


            // AST REWRITE
            // elements: IDF, type, bloc, argument
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 62:77: -> ^( FUN IDF ^( FUN_ARGS ( argument )* ) ( type )? bloc )
            {
                // RUSTWITHRULES.g:62:80: ^( FUN IDF ^( FUN_ARGS ( argument )* ) ( type )? bloc )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUN, "FUN"), root_1);

                adaptor.addChild(root_1, stream_IDF.nextNode());
                // RUSTWITHRULES.g:62:90: ^( FUN_ARGS ( argument )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUN_ARGS, "FUN_ARGS"), root_2);

                // RUSTWITHRULES.g:62:101: ( argument )*
                while ( stream_argument.hasNext() ) {
                    adaptor.addChild(root_2, stream_argument.nextTree());

                }
                stream_argument.reset();

                adaptor.addChild(root_1, root_2);
                }
                // RUSTWITHRULES.g:62:112: ( type )?
                if ( stream_type.hasNext() ) {
                    adaptor.addChild(root_1, stream_type.nextTree());

                }
                stream_type.reset();
                adaptor.addChild(root_1, stream_bloc.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl_fun"

    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // RUSTWITHRULES.g:65:1: type : ( IDF | '&' type -> ^( TYPE_ADDR type ) | 'i32' | 'bool' | 'vec' '<' type '>' -> ^( TYPE_VEC type ) );
